--- a/OnlineStoreMVC/Views/Home/QuickQuoteCompleted.cshtml
+++ b/OnlineStoreMVC/Views/Home/QuickQuoteCompleted.cshtml
@@ -8,7 +8,7 @@
 
 <!--banner-->
 <div class="container checkout-successful-panel">
-    <h2 class="title-checkout-successful">Gửi email thành công</h2>
+    <h2 class="title-checkout-successful">Gửi yêu cầu báo giá nhanh thành công</h2>
     <br />
     <div class="ser-t">
         <b></b>
@@ -18,7 +18,7 @@
     <br />
     <br />
     <h4 class="content-checkout-successful">
-        Bạn vừa gửi email thành công đến cho chúng tôi, chúng tôi sẽ liên hệ lại với bạn nhanh nhất
+        Bạn vừa gửi yêu cầu báo giá nhanh thành công đến cho chúng tôi, chúng tôi sẽ liên hệ lại với bạn nhanh nhất
     </h4>
     <h4 class="content-checkout-successful">Cảm ơn.</h4>
 </div>
