--- a/OnlineStoreMVC/Views/Home/About.cshtml
+++ b/OnlineStoreMVC/Views/Home/About.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Giới thiệu";
 }
 
+<div class="breadcrumb"><a href="/Home/Index">Trang chủ</a> » <a href="/Home/About">Liên hệ</a></div>
+
 <div class="columns-container">
     <div id="columns" class="container">
 
