--- a/OnlineStoreMVC/Views/Home/Contact.cshtml
+++ b/OnlineStoreMVC/Views/Home/Contact.cshtml
@@ -26,6 +26,8 @@
 <!-- contact -->
 <div class="contact">
     <div class="container">
+        <div class="breadcrumb"><a href="/Home/Index">Trang chủ</a> » <a href="/Home/Contact">Liên hệ</a></div>
+
         <div class="contact-grids">
             <div class="col-md-4 contact-grid text-center animated wow slideInLeft" data-wow-delay=".5s">
                 <div class="contact-grid1">
