--- a/OnlineStoreMVC/Views/Product/SearchResult.cshtml
+++ b/OnlineStoreMVC/Views/Product/SearchResult.cshtml
@@ -14,6 +14,10 @@
 <!--content-->
 <div class="men-wear">
     <div class="container">
+        <div class="breadcrumb">
+            <a href="/Home/Index">Trang chủ</a>
+            <span> » </span><a>Sản phẩm theo từ khóa "@Model.SearchString"</a>
+        </div>
         <div class="col-md-12 col-sm-12 col-xs-12 b-productItems">
             <h5>Kết Quả Tìm Kiếm</h5>
             <div class="sort-grid">
