--- a/OnlineStoreMVC/Views/Product/DisplayProducts.cshtml
+++ b/OnlineStoreMVC/Views/Product/DisplayProducts.cshtml
@@ -15,6 +15,13 @@
 
 <div class="men-wear">
     <div class="container">
+        <div class="breadcrumb">
+            <a href="/Home/Index">Trang chủ</a>
+            @for (int i = ViewBag.Path.Count - 1; i >= 0; i--)
+            {
+                <span> » </span><a href="@Url.Action("GetProductByCategory", "Product", new { id = ViewBag.Path[i].Id })">@ViewBag.Path[i].Name</a>
+            }
+        </div>
         <div class="col-md-3 products-left b-filterItems">
             <div class="css-treeview">
                 <h4>Giá</h4>
