--- a/OnlineStoreMVC/Views/Product/ProductDetails.cshtml
+++ b/OnlineStoreMVC/Views/Product/ProductDetails.cshtml
@@ -30,6 +30,13 @@
 <!-- single -->
 <div class="single">
     <div class="container">
+        <div class="breadcrumb">
+            <a href="/Home/Index">Trang chủ</a>
+            @for (int i = ViewBag.Path.Count - 1; i >= 0; i--)
+            {
+                <span> » </span><a href="@Url.Action("GetProductByCategory", "Product", new { id = ViewBag.Path[i].Id })">@ViewBag.Path[i].Name</a>
+            }
+        </div>
         <div class="row" style="padding:15px;">
             <div class="col-md-6 single-right-left animated wow slideInUp animated" style="max-width:400px;" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;">
                 <div class="single-w3agile">
