--- a/OnlineStoreMVC/Content/display-product/detail-product.css
+++ b/OnlineStoreMVC/Content/display-product/detail-product.css
@@ -33,11 +33,6 @@
     text-transform: uppercase;   
 }
 
-/*.narbar-description .nav-tabs > li > a:hover{
-    color:#fff!important;
-    
-}*/
-
 .narbar-description .nav-tabs > li {
     margin-bottom:0;
 }
@@ -53,6 +48,7 @@
     border: 1px solid #ccc;
     padding: 10px;
     background-color: #fff;
+    font-size:14px;
 }
 
 .productname-productdetails{
