Fix bugs on layout and deploy

--- a/OnlineStoreMVC/Views/Account/Login.cshtml
+++ b/OnlineStoreMVC/Views/Account/Login.cshtml
@@ -3,59 +3,50 @@
 @{
     ViewBag.Title = "Login";
 }
+@section css{
+    <style>
+        .form-login{
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 100px;
+        }
+    </style>
+}
 
 <div class="single">
     <div id="columns" class="container">
-        <h2>@ViewBag.Title.</h2>
-        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        <div class="breadcrumb"><a href="/Home/Index">Trang chủ</a> » <a href="/Acount/Login">Đăng nhập</a></div>
+
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal form-login", role = "form" }))
         {
             @Html.AntiForgeryToken()
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.Label("Email", new { @class = "col-md-3 control-label" })
+                <div class="col-md-9">
                     @Html.TextBoxFor(m => m.Email, new { @class = "is_required validate account_input form-control" })
                     @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.Label("Mật khẩu", new { @class = "col-md-3 control-label" })
+                <div class="col-md-9">
                     @Html.PasswordFor(m => m.Password, new { @class = "is_required validate account_input form-control" })
                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
-            @*<div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>*@
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Login" class="btn btn-default btn-sm" />
+                <div class="col-md-offset-3 col-md-9">
+                    <input type="submit" value="Đăng nhập" class="btn btn-default btn-sm" />
                 </div>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     @Html.ActionLink("Create new account", "/Register")
                 </div>
-            </div>
-            @*<div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="clearfix">
-                            <a class="btn btn-default btn-sm btn-login-facebook" href="#" title="Login with Your Facebook Account">
-                                Đăng nhập bằng facebook
-                            </a>
-                            <a class="btn btn-default btn-sm btn-login-google" href="#" title="Login with Your Google Account">
-                                Đăng nhập bằng Google
-                            </a>
-                        </div>
-                    </div>
-                </div>*@
+            </div>*@
         }
     </div>
 </div>
