--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -16,16 +16,14 @@
                 </div>
             </form>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12 header-right footer-bottom">
+        <div class="col-md-offset-0 col-md-4 col-sm-offset-2 col-sm-10 col-xs-offset-2 col-xs-10 pull-left header-right footer-bottom">
             @*<a href="@Url.Action("QuickQuote", "Home")" class="btn-pricereport">Báo giá nhanh</a>*@
             <ul>
                 <li>
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                    <a href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
+                    <a class="glyphicon glyphicon-envelope" href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
                 </li>
                 <li>
-                    <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-                    <a href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
+                    <a class="glyphicon glyphicon-address" href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
                 </li>
             </ul>
         </div>
