--- a/OnlineStoreMVC/Content/webcss/layout.css
+++ b/OnlineStoreMVC/Content/webcss/layout.css
@@ -86,6 +86,8 @@
         display: block;
         float: left;
         color: #fff;
+        text-align:left;
+        font-family:UTMAvo,sans-serif;
     }
 
         .header-right ul li a:hover {
@@ -204,7 +206,6 @@
 .header-middle {
     border: 1px solid #eee;
     padding: 0;
-    width:80%;
 }
 
 .header-right ul {
