--- a/OnlineStoreMVC/Content/webcss/style.css
+++ b/OnlineStoreMVC/Content/webcss/style.css
@@ -1,3 +1,7 @@
+.glyphicon-envelope:before,.glyphicon-address:before {
+    margin-right:5px;
+}
+
 /*-Contact page-*/
 .contact-grids, .map, .contact-form {
     background-color: #fff;
@@ -815,7 +819,7 @@ ol {
     }
 
     .header-middle {
-        margin-top: 15px;
+        /*margin-top: 15px;*/
     }
 
     .new_arrivals {
@@ -1138,14 +1142,15 @@ ol {
 
     .header-left {
         float: left;
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;*/
+        /*margin: 10px auto;*/
     }
 
     .header-right {
         float: none;
         width: 100%;
-        margin: 5px auto;
+        margin-top:0;
+        /*margin: 5px auto;*/
     }
 
         .header-right ul {
@@ -1153,10 +1158,11 @@ ol {
         }
 
             .header-right ul li {
-                display: block;
+                display: inline-block;
+                float:left;
                 margin: 0px 5px;
-                width: 100%;
-                float: none;
+                width: auto;
+                /*float: none;*/
             }
 
     .section_room {
@@ -1510,8 +1516,8 @@ ol {
 @media (max-width: 800px) and (min-width: 769px) {
     .header-left {
         float: left;
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;*/
+        /*margin: 10px auto;*/
     }
 
     .pignose-layerslider .slide-visual .script-wrap {
@@ -1621,8 +1627,8 @@ ol {
 
     .header-left {
         float: left;
-        width: 20% !important;
-        margin: 10px auto;
+        /*width: 20% !important;
+        margin: 10px auto;*/
     }
 
     .header-bot {
@@ -1778,8 +1784,8 @@ ol {
 
     .header-left {
         float: left;
-        width: 20% !important;
-        margin: 10px auto;
+        /*width: 20% !important;
+        margin: 10px auto;*/
     }
 
     .b-brandbanner .owl-carousel {
@@ -2075,8 +2081,8 @@ ol {
 
     .header-left {
         float: left;
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
 
     .b-brandbanner .owl-carousel {
@@ -2332,9 +2338,9 @@ ol {
 
     .header-left {
         float: left;
-        width: 20%;
+        /*width: 20%;*/
         padding: 0;
-        margin: 10px auto;
+        /*margin: 10px auto;*/
     }
     .pignose-layerslider .slide-visual .script-wrap {
         left: 340px;
@@ -2701,8 +2707,8 @@ ol {
     }
 
     .header-left {
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
 
     .footer-bottom a span {
@@ -2918,13 +2924,12 @@ ol {
 
     .header-middle {
         float: left;
-        width: 80%;
         margin: 0;
     }
 
     .header-left {
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
     .section_room select {
         padding: 6px 10px;
@@ -2948,6 +2953,7 @@ ol {
         float: left;
         width: 100%;
         padding: 0;
+        margin-top:0;
     }
 
         .header-right ul {
@@ -3149,6 +3155,7 @@ ol {
         float: left;
         width: 100%;
         padding: 0;
+        margin-top:0;
     }
 
     .b-mainbrand-topmenu {
@@ -3322,6 +3329,7 @@ ol {
         float: left;
         width: 100%;
         padding: 0;
+        margin-top:0;
     }
 
     /*.b-brandbanner .owl-carousel {
@@ -3392,8 +3400,8 @@ ol {
     }
 
     .header-left {
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
 
     .timetable_sub th {
@@ -3418,6 +3426,7 @@ ol {
         float: left;
         width: 100%;
         padding: 0;
+        margin-top:0;
     }
 
     .b-brandbanner .owl-carousel {
@@ -3437,8 +3446,8 @@ ol {
     }
 
     .header-left {
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
 
     .footer-bottom a span {
@@ -3744,8 +3753,8 @@ ol {
     }
 
     .header-left {
-        width: 20%;
-        margin: 10px auto;
+        /*width: 20%;
+        margin: 10px auto;*/
     }
 
     .childrencategory-groupproduct {
