--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -23,7 +23,7 @@
                     <a class="glyphicon glyphicon-envelope" href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
                 </li>
                 <li>
-                    <a class="glyphicon glyphicon-address" href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
+                    <a class="glyphicon glyphicon-map-marker" href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
                 </li>
             </ul>
         </div>
