--- a/OnlineStoreMVC/Views/Home/Contact.cshtml
+++ b/OnlineStoreMVC/Views/Home/Contact.cshtml
@@ -33,21 +33,21 @@
                 <div class="contact-grid1">
                     <i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>
                     <h4>Địa Chỉ</h4>
-                    <p>Hải Châu <span>Đà Nẵng.</span></p>
+                    <p>207 Trường Chinh, P. An Khê, Q. Thanh Khê <span>Đà Nẵng.</span></p>
                 </div>
             </div>
             <div class="col-md-4 contact-grid text-center animated wow slideInUp" data-wow-delay=".5s">
                 <div class="contact-grid2">
                     <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>
                     <h4>Điện Thoại</h4>
-                    <p>+1234 758 839<span>+1273 748 730</span></p>
+                    <p>0906553212</p>
                 </div>
             </div>
             <div class="col-md-4 contact-grid text-center animated wow slideInRight" data-wow-delay=".5s">
                 <div class="contact-grid3">
                     <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>
                     <h4>Email</h4>
-                    <p><a href="mailto:info@example.com">info@example1.com</a><span><a href="mailto:info@example.com">info@example2.com</a></span></p>
+                    <p><a href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a></p>
                 </div>
             </div>
             <div class="clearfix"> </div>
