--- a/OnlineStoreMVC/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <div class="columns-container top-space-body">
             @RenderBody()
         </div>
-        @RenderPage("_FooterPartial.cshtml")
+        @Html.Action("_FooterPartial", "Home", null)
     </div>
 </body>
 </html>
