--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -1,80 +1,81 @@
 ﻿@using Microsoft.AspNet.Identity
-
-<!-- start header-bot -->
-<div class="header-bot">
-    <div class="container">
-        <div class="col-md-2 col-sm-2 col-xs-2 header-left">
-            <a href="/Home/Index"><img src="~/Content/Images/Banners/nhanphuoclogo.jpg"></a>
-        </div>
-        <div class="col-md-6 col-sm-10 col-xs-10 header-middle">
-            <form action="/Product/SearchProduct" method="get" class="form-searchbox">
-                <div class="search">
-                    <input type="search" value="@Request.QueryString["searchString"]" placeholder="Tìm Kiếm" name="searchString">
+<div class="header_menu_container">
+    <div class="header_menu_wrapper">
+        <!-- start header-bot -->
+        <div class="header-bot">
+            <div class="container">
+                <div class="col-md-2 col-sm-2 col-xs-2 header-left">
+                    <a href="/Home/Index"><img src="~/Content/Images/Banners/nhanphuoclogo.jpg"></a>
                 </div>
-                <div class="sear-sub">
-                    <input type="submit" value="Tìm Kiếm">
+                <div class="col-md-6 col-sm-10 col-xs-10 header-middle">
+                    <form action="/Product/SearchProduct" method="get" class="form-searchbox">
+                        <div class="search">
+                            <input type="search" value="@Request.QueryString["searchString"]" placeholder="Tìm Kiếm" name="searchString">
+                        </div>
+                        <div class="sear-sub">
+                            <input type="submit" value="Tìm Kiếm">
+                        </div>
+                    </form>
                 </div>
-            </form>
+                <div class="col-md-4 col-sm-12 col-xs-12 header-right footer-bottom" style="min-width: 350px;">
+                    @*<a href="@Url.Action("QuickQuote", "Home")" class="btn-pricereport">Báo giá nhanh</a>*@
+                    <ul>
+                        <li>
+                            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                            <a href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+                            <a href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+            </div>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12 header-right footer-bottom">
-            @*<a href="@Url.Action("QuickQuote", "Home")" class="btn-pricereport">Báo giá nhanh</a>*@
-            <ul>
-                <li>
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                    <a href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
-                </li>
-                <li>
-                    <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-                    <a href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
-                </li>
-            </ul>
-        </div>
-        <div class="clearfix"></div>
-    </div>
-</div>
-<!-- end header-bot -->
-
-<!-- start main menu -->
-<div class="ban-top">
-    <div class="container">
-        <div class="top_nav_left">
-            <nav class="navbar navbar-default navbar_HomePage">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav menu__list">
-                            <li class="dropdown menu__item">
-                                <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-                                    Danh mục sản phẩm
-                                </a>
-                                <ul class="dropdown-menu dropdown-content">
-                                    @Html.Action("SubCategoriesPatial", "Home")
+        <!-- end header-bot -->
+        <!-- start main menu -->
+        <div class="ban-top">
+            <div class="container">
+                <div class="top_nav_left">
+                    <nav class="navbar navbar-default navbar_HomePage">
+                        <div class="container-fluid">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            </div>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav menu__list">
+                                    <li class="dropdown menu__item">
+                                        <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                                            Danh mục sản phẩm
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-content">
+                                            @Html.Action("SubCategoriesPatial", "Home")
+                                        </ul>
+                                    </li>
+                                    <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang chủ <span class="sr-only">(current)</span></a></li>
+                                    <li class="menu__item">@Html.ActionLink("Tư vấn kết nối", "Index", "News", null, new { @class = "menu__link" })</li>
+                                    <li class="menu__item">@Html.ActionLink("Liên hệ", "Contact", "Home", null, new { @class = "menu__link" })</li>
+                                    <li class="menu__item">@Html.ActionLink("Báo giá nhanh", "QuickQuote", "Home", null, new { @class = "menu__link" })</li>
                                 </ul>
-                            </li>
-                            <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang chủ <span class="sr-only">(current)</span></a></li>
-                            <li class="menu__item">@Html.ActionLink("Tư vấn kết nối", "Index", "News", null, new { @class = "menu__link" })</li>
-                            <li class="menu__item">@Html.ActionLink("Liên hệ", "Contact", "Home", null, new { @class = "menu__link" })</li>
-                            <li class="menu__item">@Html.ActionLink("Báo giá nhanh", "QuickQuote", "Home", null, new { @class = "menu__link" })</li>
-                        </ul>
-                    </div>
+                            </div>
+                        </div>
+                    </nav>
                 </div>
-            </nav>
+                <div class="clearfix"></div>
+            </div>
         </div>
-        <div class="clearfix"></div>
+        <!-- end main menu -->
     </div>
 </div>
-<!-- end main menu -->
-
 <script>
     // handle responsive for main menu
     $(function () {
