--- a/OnlineStoreMVC/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/argularjs")
+    <!-- Web Js -->
+    <script src="~/Scripts/webjs/webjs.js"></script>
     <!-- Custom Theme files -->
     <script src="~/Scripts/webjs/simpleCart.min.js"></script>
     <script src="~/Scripts/webjs/jquery.easing.min.js"></script>
@@ -28,7 +30,7 @@
     @RenderSection("scripts", required: false)
 </head>
 <body id="index" class="index hide-left-column hide-right-column lang_en one-column">
-    <div id="page">
+    <div id="page" class="mainPage">
         @Html.Action("RenderHeaderPartial", "Home", new { @searchType = Request.QueryString["searchType"] })
         <div class="columns-container top-space-body">
             @RenderBody()
