--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -33,47 +33,32 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-        <div class="col-md-offset-0 col-md-4 col-sm-offset-2 col-sm-10 col-xs-offset-2 col-xs-10 pull-left header-right footer-bottom">
-            @*<a href="@Url.Action("QuickQuote", "Home")" class="btn-pricereport">Báo giá nhanh</a>*@
-            <ul>
-                <li>
-                    <a class="glyphicon glyphicon-envelope" href="mailto:nhanphuocdn@gmail.com">nhanphuocdn@gmail.com</a>
-                </li>
-                <li>
-                    <a class="glyphicon glyphicon-map-marker" href="mailto:nhanphuocdn@gmail.com">207 Trường Chinh, Q.Thanh Khê, Tp Đà Nẵng</a>
-                </li>
-            </ul>
-        </div>
-        <div class="clearfix"></div>
-    </div>
-</div>
-<!-- end header-bot -->
-
-<!-- start main menu -->
-<div class="ban-top">
-    <div class="container">
-        <div class="top_nav_left">
-            <nav class="navbar navbar-default navbar_HomePage">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav menu__list">
-                            <li class="dropdown menu__item">
-                                <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-                                    Danh mục sản phẩm
-                                </a>
-                                <ul class="dropdown-menu dropdown-content">
-                                    @Html.Action("SubCategoriesPatial", "Home")
+        <div class="ban-top">
+            <div class="container">
+                <div class="top_nav_left">
+                    <nav class="navbar navbar-default navbar_HomePage">
+                        <div class="container-fluid">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            </div>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav menu__list">
+                                    <li class="dropdown menu__item">
+                                        <a href="#" class="dropdown-toggle menu__link dropdown dropbtn ddbtn-listcategory" style="padding-left:3px !important;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                                            Danh mục sản phẩm
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-content" style="border-top: none;">
+                                            @Html.Action("SubCategoriesPatial", "Home")
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -82,9 +67,14 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-        <!-- end main menu -->
+        <div class="clearfix"></div>
     </div>
 </div>
+<!-- end header-bot -->
+
+<!-- start main menu -->
+
+        <!-- end main menu -->
 <script>
     // handle responsive for main menu
     $(function () {
